--- a/fim.mare/FIM.MARE.csproj
+++ b/fim.mare/FIM.MARE.csproj
@@ -102,6 +102,7 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Microsoft.MetadirectoryServicesEx.dll" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
