--- a/fim.mare/FIM.MARE.csproj
+++ b/fim.mare/FIM.MARE.csproj
@@ -9,7 +9,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ApplicationIcon />
     <AssemblyKeyContainerName />
-    <AssemblyName>ma.sp-profile.FIM.MARE</AssemblyName>
+    <AssemblyName>FIM.MARE</AssemblyName>
     <AssemblyOriginatorKeyFile />
     <AssemblyOriginatorKeyMode>None</AssemblyOriginatorKeyMode>
     <DefaultClientScript>JScript</DefaultClientScript>
@@ -97,6 +97,7 @@
     <Compile Include="Model\ManagementAgent.cs" />
     <Compile Include="Model\Source.cs" />
     <Compile Include="Model\Transforms.cs" />
+    <Compile Include="Model\Transforms\Transforms.Not.cs" />
     <Compile Include="Tracer.cs" />
   </ItemGroup>
   <ItemGroup>
